--- a/css/estilo.css
+++ b/css/estilo.css
@@ -18,3 +18,11 @@ body{
 #container h3{
     font-size: 15px;
 }
+#cabecera{
+    background-color:#33A;
+    margin: 0;
+    padding: 0.5em;
+    color: white;
+    font-weight: bold;
+    box-shadow: 0px 5px 30px 0px rgb(0, 0, 75);
+}
