--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,5 @@
 body{
+    background-color: bisque;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     color: red;
@@ -17,12 +18,18 @@ body{
 }
 #container h3{
     font-size: 15px;
+    align-items: center;
 }
 #cabecera{
-    background-color:#33A;
+    background-color: gainsboro;
     margin: 0;
     padding: 0.5em;
-    color: white;
+    color: blue;
     font-weight: bold;
     box-shadow: 0px 5px 30px 0px rgb(0, 0, 75);
+}
+#cabecera #logo
+{
+    width: 120px;
+    vertical-align: middle;
 }
