--- a/css/estilo.css
+++ b/css/estilo.css
@@ -26,3 +26,12 @@ body{
     font-weight: bold;
     box-shadow: 0px 5px 30px 0px rgb(0, 0, 75);
 }
+#footer 
+{
+    background-color: cornflowerblue;
+}
+#footer #p
+{
+    background-color: darkcyan;
+    color: darkorchid;
+}
